[package]
name = "links"
version = "2.0.0-alpha.0"
authors = ["Tobias Moldan <contact@tobiasmoldan.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
clap = "2"
shadow-rs = "0.5"
log = "0.4"
pretty_env_logger = "0.4"
env_logger = "0.8"
dotenv = "0.15"
base64 = "0.13"
bcrypt = "0.9"
rayon = "1"

[dependencies.sqlx]
version = "0.5"
features = [
    "runtime-tokio-rustls",
    "postgres",
    "mysql",
    "sqlite",
    "any",
    "chrono",
    "macros",
    "migrate",
]

[build-dependencies]
shadow-rs = "0.5"
